[package]
name = "storage_device"
version = "1.0.0"
authors = ["Thog <me@thog.eu>", "orycterope <tvermeilh@gmail.com>"]
keywords = ["storage", "block", "device", "block-device", "storage-device", "io"]
categories = ["filesystem", "caching", "no-std"]
description = "A storage device representation to help filesystem development."
homepage = "https://github.com//sunriseos/storage_device"
repository = "https://github.com//sunriseos/storage_device.git"
edition = "2018"

[package.metadata.docs.rs]
features = ["cached-block-device"]

[dependencies]
lru = { version = "0.1.17", optional = true }
plain = { version = "0.2.3" }

[features]
default = ["std"]
# Link with std.
# This feature adds implementation of BlockDevice for std::fs::File.
#
# Usually used for testing.
std = ["alloc"]
# Link with alloc.
# Activating this feature requires setting a global_allocator (unless used with
# std). It allows using the StorageDevice trait with Box<T>.
alloc = []
# This feature adds the CachedBlockDevice wrapper around any BlockDevice.
# Uses the `lru` crate to manage its cache.
#
# Implies feature `std`.
cached-block-device = ["alloc", "lru"]
# Mutually exclusive with the `std` feature, as this would require to disable "lru/nightly" when built with std,
# but cargo does not provide any way to do conditionnal feature definitions.
cached-block-device-nightly = ["lru/nightly"]
